src/Teams/Teams/docs/v1.0/Microsoft.Graph.Teams.md
---
Module Name: Microsoft.Graph.Teams
Module Guid: 045b0027-13ea-457a-8643-748f7fe002ce
Download Help Link: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.teams
Help Version: 1.0.0.0
Locale: en-US
---

# Microsoft.Graph.Teams Module
## Description
Microsoft Graph PowerShell Cmdlets

## Microsoft.Graph.Teams Cmdlets
### [Copy-MgTeam](Copy-MgTeam.md)
Invoke action clone

### [Get-MgAppCatalog](Get-MgAppCatalog.md)
Get appCatalogs

### [Get-MgAppCatalogTeamApp](Get-MgAppCatalogTeamApp.md)
Get teamsApps from appCatalogs

### [Get-MgAppCatalogTeamAppDefinition](Get-MgAppCatalogTeamAppDefinition.md)
Get appDefinitions from appCatalogs

### [Get-MgGroupTeam](Get-MgGroupTeam.md)
Get team from groups

### [Get-MgTeam](Get-MgTeam.md)
Get entity from teams by key

### [Get-MgTeamChannel](Get-MgTeamChannel.md)
Get channels from teams

### [Get-MgTeamChannelFileFolder](Get-MgTeamChannelFileFolder.md)
Get filesFolder from teams

### [Get-MgTeamChannelMessage](Get-MgTeamChannelMessage.md)
Get messages from teams

### [Get-MgTeamChannelMessageHostedContent](Get-MgTeamChannelMessageHostedContent.md)
Get hostedContents from teams

### [Get-MgTeamChannelMessageReply](Get-MgTeamChannelMessageReply.md)
Get replies from teams

### [Get-MgTeamChannelTab](Get-MgTeamChannelTab.md)
Get tabs from teams

### [Get-MgTeamChannelTabTeamApp](Get-MgTeamChannelTabTeamApp.md)
Get teamsApp from teams

### [Get-MgTeamGroup](Get-MgTeamGroup.md)
Get group from teams

### [Get-MgTeamInstalledApp](Get-MgTeamInstalledApp.md)
Get installedApps from teams

### [Get-MgTeamInstalledAppTeamApp](Get-MgTeamInstalledAppTeamApp.md)
Get teamsApp from teams

### [Get-MgTeamInstalledAppTeamAppDefinition](Get-MgTeamInstalledAppTeamAppDefinition.md)
Get teamsAppDefinition from teams

### [Get-MgTeamMember](Get-MgTeamMember.md)
Get members from teams

### [Get-MgTeamOperation](Get-MgTeamOperation.md)
Get operations from teams

### [Get-MgTeamPrimaryChannel](Get-MgTeamPrimaryChannel.md)
Get primaryChannel from teams

### [Get-MgTeamPrimaryChannelFileFolder](Get-MgTeamPrimaryChannelFileFolder.md)
Get filesFolder from teams

### [Get-MgTeamPrimaryChannelMessage](Get-MgTeamPrimaryChannelMessage.md)
Get messages from teams

### [Get-MgTeamPrimaryChannelMessageHostedContent](Get-MgTeamPrimaryChannelMessageHostedContent.md)
Get hostedContents from teams

### [Get-MgTeamPrimaryChannelMessageReply](Get-MgTeamPrimaryChannelMessageReply.md)
Get replies from teams

### [Get-MgTeamPrimaryChannelTab](Get-MgTeamPrimaryChannelTab.md)
Get tabs from teams

### [Get-MgTeamPrimaryChannelTabTeamApp](Get-MgTeamPrimaryChannelTabTeamApp.md)
Get teamsApp from teams

### [Get-MgTeamSchedule](Get-MgTeamSchedule.md)
Get schedule from teams

### [Get-MgTeamScheduleOfferShiftRequest](Get-MgTeamScheduleOfferShiftRequest.md)
Get offerShiftRequests from teams

### [Get-MgTeamScheduleOpenShift](Get-MgTeamScheduleOpenShift.md)
Get openShifts from teams

### [Get-MgTeamScheduleOpenShiftChangeRequest](Get-MgTeamScheduleOpenShiftChangeRequest.md)
Get openShiftChangeRequests from teams

### [Get-MgTeamScheduleSchedulingGroup](Get-MgTeamScheduleSchedulingGroup.md)
Get schedulingGroups from teams

### [Get-MgTeamScheduleShift](Get-MgTeamScheduleShift.md)
Get shifts from teams

### [Get-MgTeamScheduleSwapShiftChangeRequest](Get-MgTeamScheduleSwapShiftChangeRequest.md)
Get swapShiftsChangeRequests from teams

### [Get-MgTeamScheduleTimeOff](Get-MgTeamScheduleTimeOff.md)
Get timesOff from teams

### [Get-MgTeamScheduleTimeOffReason](Get-MgTeamScheduleTimeOffReason.md)
Get timeOffReasons from teams

### [Get-MgTeamScheduleTimeOffRequest](Get-MgTeamScheduleTimeOffRequest.md)
Get timeOffRequests from teams

### [Get-MgTeamTemplate](Get-MgTeamTemplate.md)
Get template from teams

### [Get-MgTeamwork](Get-MgTeamwork.md)
Get teamwork

### [Get-MgTeamworkWorkforceIntegration](Get-MgTeamworkWorkforceIntegration.md)
Get workforceIntegrations from teamwork

### [Get-MgUserJoinedTeam](Get-MgUserJoinedTeam.md)
Get joinedTeams from users

### [Invoke-MgArchiveTeam](Invoke-MgArchiveTeam.md)
Invoke action archive

### [Invoke-MgShareTeamSchedule](Invoke-MgShareTeamSchedule.md)
Invoke action share

### [Invoke-MgUnarchiveTeam](Invoke-MgUnarchiveTeam.md)
Invoke action unarchive

### [New-MgAppCatalogTeamApp](New-MgAppCatalogTeamApp.md)
Create new navigation property to teamsApps for appCatalogs

### [New-MgAppCatalogTeamAppDefinition](New-MgAppCatalogTeamAppDefinition.md)
Create new navigation property to appDefinitions for appCatalogs

### [New-MgTeam](New-MgTeam.md)
Add new entity to teams

### [New-MgTeamChannel](New-MgTeamChannel.md)
Create new navigation property to channels for teams

### [New-MgTeamChannelMessage](New-MgTeamChannelMessage.md)
Create new navigation property to messages for teams

### [New-MgTeamChannelMessageHostedContent](New-MgTeamChannelMessageHostedContent.md)
Create new navigation property to hostedContents for teams

### [New-MgTeamChannelMessageReply](New-MgTeamChannelMessageReply.md)
Create new navigation property to replies for teams

### [New-MgTeamChannelTab](New-MgTeamChannelTab.md)
Create new navigation property to tabs for teams

### [New-MgTeamInstalledApp](New-MgTeamInstalledApp.md)
Create new navigation property to installedApps for teams

### [New-MgTeamMember](New-MgTeamMember.md)
Create new navigation property to members for teams

### [New-MgTeamOperation](New-MgTeamOperation.md)
Create new navigation property to operations for teams

### [New-MgTeamPrimaryChannelMessage](New-MgTeamPrimaryChannelMessage.md)
Create new navigation property to messages for teams

### [New-MgTeamPrimaryChannelMessageHostedContent](New-MgTeamPrimaryChannelMessageHostedContent.md)
Create new navigation property to hostedContents for teams

### [New-MgTeamPrimaryChannelMessageReply](New-MgTeamPrimaryChannelMessageReply.md)
Create new navigation property to replies for teams

### [New-MgTeamPrimaryChannelTab](New-MgTeamPrimaryChannelTab.md)
Create new navigation property to tabs for teams

### [New-MgTeamScheduleOfferShiftRequest](New-MgTeamScheduleOfferShiftRequest.md)
Create new navigation property to offerShiftRequests for teams

### [New-MgTeamScheduleOpenShift](New-MgTeamScheduleOpenShift.md)
Create new navigation property to openShifts for teams

### [New-MgTeamScheduleOpenShiftChangeRequest](New-MgTeamScheduleOpenShiftChangeRequest.md)
Create new navigation property to openShiftChangeRequests for teams

### [New-MgTeamScheduleSchedulingGroup](New-MgTeamScheduleSchedulingGroup.md)
Create new navigation property to schedulingGroups for teams

### [New-MgTeamScheduleShift](New-MgTeamScheduleShift.md)
Create new navigation property to shifts for teams

### [New-MgTeamScheduleSwapShiftChangeRequest](New-MgTeamScheduleSwapShiftChangeRequest.md)
Create new navigation property to swapShiftsChangeRequests for teams

### [New-MgTeamScheduleTimeOff](New-MgTeamScheduleTimeOff.md)
Create new navigation property to timesOff for teams

### [New-MgTeamScheduleTimeOffReason](New-MgTeamScheduleTimeOffReason.md)
Create new navigation property to timeOffReasons for teams

### [New-MgTeamScheduleTimeOffRequest](New-MgTeamScheduleTimeOffRequest.md)
Create new navigation property to timeOffRequests for teams

### [New-MgTeamworkWorkforceIntegration](New-MgTeamworkWorkforceIntegration.md)
Create new navigation property to workforceIntegrations for teamwork

### [New-MgUserJoinedTeam](New-MgUserJoinedTeam.md)
Create new navigation property to joinedTeams for users

### [Remove-MgTeam](Remove-MgTeam.md)
Delete entity from teams

### [Update-MgAppCatalog](Update-MgAppCatalog.md)
Update appCatalogs

### [Update-MgAppCatalogTeamApp](Update-MgAppCatalogTeamApp.md)
Update the navigation property teamsApps in appCatalogs

### [Update-MgAppCatalogTeamAppDefinition](Update-MgAppCatalogTeamAppDefinition.md)
Update the navigation property appDefinitions in appCatalogs

### [Update-MgGroupTeam](Update-MgGroupTeam.md)
Update the navigation property team in groups

### [Update-MgTeam](Update-MgTeam.md)
Update entity in teams

### [Update-MgTeamChannel](Update-MgTeamChannel.md)
Update the navigation property channels in teams

### [Update-MgTeamChannelFileFolder](Update-MgTeamChannelFileFolder.md)
Update the navigation property filesFolder in teams

### [Update-MgTeamChannelMessage](Update-MgTeamChannelMessage.md)
Update the navigation property messages in teams

### [Update-MgTeamChannelMessageHostedContent](Update-MgTeamChannelMessageHostedContent.md)
Update the navigation property hostedContents in teams

### [Update-MgTeamChannelMessageReply](Update-MgTeamChannelMessageReply.md)
Update the navigation property replies in teams

### [Update-MgTeamChannelTab](Update-MgTeamChannelTab.md)
Update the navigation property tabs in teams

### [Update-MgTeamInstalledApp](Update-MgTeamInstalledApp.md)
Update the navigation property installedApps in teams

### [Update-MgTeamMember](Update-MgTeamMember.md)
Update the navigation property members in teams

### [Update-MgTeamOperation](Update-MgTeamOperation.md)
Update the navigation property operations in teams

### [Update-MgTeamPrimaryChannel](Update-MgTeamPrimaryChannel.md)
Update the navigation property primaryChannel in teams

### [Update-MgTeamPrimaryChannelFileFolder](Update-MgTeamPrimaryChannelFileFolder.md)
Update the navigation property filesFolder in teams

### [Update-MgTeamPrimaryChannelMessage](Update-MgTeamPrimaryChannelMessage.md)
Update the navigation property messages in teams

### [Update-MgTeamPrimaryChannelMessageHostedContent](Update-MgTeamPrimaryChannelMessageHostedContent.md)
Update the navigation property hostedContents in teams

### [Update-MgTeamPrimaryChannelMessageReply](Update-MgTeamPrimaryChannelMessageReply.md)
Update the navigation property replies in teams

### [Update-MgTeamPrimaryChannelTab](Update-MgTeamPrimaryChannelTab.md)
Update the navigation property tabs in teams

### [Update-MgTeamSchedule](Update-MgTeamSchedule.md)
Update the navigation property schedule in teams

### [Update-MgTeamScheduleOfferShiftRequest](Update-MgTeamScheduleOfferShiftRequest.md)
Update the navigation property offerShiftRequests in teams

### [Update-MgTeamScheduleOpenShift](Update-MgTeamScheduleOpenShift.md)
Update the navigation property openShifts in teams

### [Update-MgTeamScheduleOpenShiftChangeRequest](Update-MgTeamScheduleOpenShiftChangeRequest.md)
Update the navigation property openShiftChangeRequests in teams

### [Update-MgTeamScheduleSchedulingGroup](Update-MgTeamScheduleSchedulingGroup.md)
Update the navigation property schedulingGroups in teams

### [Update-MgTeamScheduleShift](Update-MgTeamScheduleShift.md)
Update the navigation property shifts in teams

### [Update-MgTeamScheduleSwapShiftChangeRequest](Update-MgTeamScheduleSwapShiftChangeRequest.md)
Update the navigation property swapShiftsChangeRequests in teams

### [Update-MgTeamScheduleTimeOff](Update-MgTeamScheduleTimeOff.md)
Update the navigation property timesOff in teams

### [Update-MgTeamScheduleTimeOffReason](Update-MgTeamScheduleTimeOffReason.md)
Update the navigation property timeOffReasons in teams

### [Update-MgTeamScheduleTimeOffRequest](Update-MgTeamScheduleTimeOffRequest.md)
Update the navigation property timeOffRequests in teams

### [Update-MgTeamwork](Update-MgTeamwork.md)
Update teamwork

### [Update-MgTeamworkWorkforceIntegration](Update-MgTeamworkWorkforceIntegration.md)
Update the navigation property workforceIntegrations in teamwork

### [Update-MgUserJoinedTeam](Update-MgUserJoinedTeam.md)
Update the navigation property joinedTeams in users

